<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Welcome to our Kiosk-Mode</string>
    <string name="app_name">Kiosk</string>
    <string name="configure">Configure</string>
    <string name="exit">Exit</string>
    <string name="passwd">Password</string>
    <string name="providePW">Please provide the root password</string>
    <string name="ok">OK</string>
    <string name="btnTest">List available apps</string>
    
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="androidSettings">Android Settings</string>
    
</resources>
