<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    />
<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/btnTest" android:text="@string/btnTest"></Button>
<LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:layout_height="wrap_content">
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/one" android:layout_weight="1" android:id="@+id/btnOne"></Button>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/two" android:id="@+id/btnTwo" android:layout_weight="1"></Button>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/three" android:id="@+id/btnThree" android:layout_weight="1"></Button>
</LinearLayout>
<LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout2" android:layout_height="wrap_content">
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/four" android:id="@+id/btnFour" android:layout_weight="1"></Button>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/five" android:id="@+id/btnFive" android:layout_weight="1"></Button>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/six" android:id="@+id/btnSix" android:layout_weight="1"></Button>
</LinearLayout>
<LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout3" android:layout_height="wrap_content">
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/seven" android:id="@+id/btnSeven" android:layout_weight="1"></Button>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/eight" android:id="@+id/btnEight" android:layout_weight="1"></Button>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/nine" android:id="@+id/btnNine" android:layout_weight="1"></Button>
</LinearLayout>
</LinearLayout>
